travaille bien mon ptit Joan

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -23,9 +23,21 @@ events {
 
 }
 http {
+#	server {
+#	
+#	listen 8080;
+#	
+#	
+#	server_name locahost;
+#	
+#	
+#	return 301 https://localhost$request_uri;
+#	
+#	}
+
 	server {
 		server_name localhost www.localhost;
-		listen 8080 ssl;
+		listen 8080 ssl default_server;
 		listen [::]:8080 ssl;
 		ssl_certificate     cert.crt;
  		ssl_certificate_key key.key;
