--- a/srcs/mariaDB/Dockerfile
+++ b/srcs/mariaDB/Dockerfile
@@ -1,3 +1,6 @@
+ARG user_name
+ARG user_password
+
 FROM debian:buster
 
 MAINTAINER JoanBondri
@@ -5,5 +8,11 @@ MAINTAINER JoanBondri
 RUN		apt-get update -y \
 		&& apt-get install mariadb-server -y \
 		&& apt-get install vim -y \
-		&& apt-get install wget -y 
-#CMD		["mysql_secure_installation;"]
+		&& apt-get install wget -y \
+		&& echo $USER_NAME livre
+	
+ADD		./requirements/config.sh /config.sh
+
+RUN		chmod 777 /config.sh;
+
+CMD		["/config.sh", $user_name , $user_password]
