--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,21 +1,29 @@
 FROM debian:buster
 
 MAINTAINER JoanBondri
-RUN apt update -y;
-RUN apt-get update -y;
-RUN apt install -y php7.3-fpm php7.3-mysql
-RUN apt install -y php7.3-curl
-RUN apt install -y php7.3-gd
-RUN apt install -y php7.3-bcmath
-RUN apt install -y php7.3-cgi
-RUN apt install -y php7.3-ldap
-RUN apt install -y php7.3-mbstring
-RUN apt install -y php7.3-xml
-RUN apt install -y php7.3-soap
-RUN apt install -y php7.3-xsl
-RUN apt install -y php7.3-zip
-
+RUN		apt update -y;
+RUN		apt-get update -y;
+RUN		apt install -y curl;
+RUN		apt install -y tar;
+RUN		apt install -y php7.3-fpm php7.3-mysql
+RUN		apt install -y php7.3-curl
+RUN		apt install -y php7.3-gd
+RUN		apt install -y php7.3-bcmath
+RUN		apt install -y php7.3-cgi
+RUN		apt install -y php7.3-ldap
+RUN		apt install -y php7.3-mbstring
+RUN		apt install -y php7.3-xml
+RUN		apt install -y php7.3-soap
+RUN		apt install -y php7.3-xsl
+RUN		apt install -y php7.3-zip
+WORKDIR		/tmp
+RUN		curl -O https://wordpress.org/latest.tar.gz
+RUN		tar xzvf latest.tar.gz
+RUN		cp /tmp/wordpress/wp-config-sample.php /tmp/wordpress/wp-config.php
+RUN		mkdir -p /tmp/wordpress/wp-content/upgrade /var/www/wordpress /run/php
+RUN		sed 's/listen = \/run\/php\/php7.3-fpm.sock/listen = 0.0.0.0:9000/' -i /etc/php/7.3/fpm/pool.d/www.conf
+RUN		cp -a /tmp/wordpress/. /var/www/wordpress
 ADD		requirements/wordpress.conf /etc/
 
 EXPOSE	9000
-CMD /usr/sbin/php7.3-fpm -R -F
+CMD /usr/sbin/php-fpm7.3 -R -F
