--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -3,31 +3,25 @@ FROM debian:buster
 MAINTAINER JoanBondri
 
 RUN		apt update -y
+
 RUN		apt-get update -y
+
 RUN		apt-get install nginx -y \
-		&& apt-get install mariadb-server -y \
 		&& apt-get install vim -y \
 		&& apt-get install wget -y \
 		&& apt-get clean \
  		&& rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-RUN apt update -y;
-RUN apt-get update -y;
-RUN apt install -y php7.3-fpm php7.3-mysql
-RUN apt install -y php7.3-curl
-RUN apt install -y php7.3-gd
-RUN apt install -y php7.3-bcmath
-RUN apt install -y php7.3-cgi
-RUN apt install -y php7.3-ldap
-RUN apt install -y php7.3-mbstring
-RUN apt install -y php7.3-xml
-RUN apt install -y php7.3-soap
-RUN apt install -y php7.3-xsl
-RUN apt install -y php7.3-zip
-ADD		./nginx.conf /etc/nginx/nginx.conf 
-ADD		./index.html /var/www/html/
-ADD		./config.sh /
 
-RUN		sh /config.sh
+RUN		mkdir -p /buff/nginx/
+
+WORKDIR		/buff/nginx/
+
+ADD		./requirements/nginx.conf /etc/nginx/nginx.conf 
+
+ADD		./requirements/config.sh /buff/nginx/config.sh
+
+RUN		mv /var/www/html/index.nginx-debian.html /var/www/html/index.html
+RUN		sh /buff/nginx/config.sh
 
 EXPOSE 8080
 
