feat break : encore wordpress

--- a/srcs/nginx/requirements/nginx.conf
+++ b/srcs/nginx/requirements/nginx.conf
@@ -43,8 +43,8 @@ http {
  		ssl_certificate_key key.key;
    		ssl_protocols       TLSv1.2 TLSv1.3;
  		ssl_ciphers         HIGH:!aNULL:!MD5;
-		root /var/www/html;
-		index index.html;
+		root /data/volumes/wordpress;
+		index index.html index.php;
 		location / {
 			try_files $uri $uri/ =404;
 		}
