--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,7 +8,7 @@ services :
     ports :
         - "8080:8080"
     volumes :
-        - /mnt/nfs/homes/jbondri/data/wordpress:/data/volumes/wordpress/
+        - /mnt/nfs/homes/jbondri/data/wordpress:/var/www/wordpress/
     networks :
         - backend
 
@@ -17,7 +17,7 @@ services :
     ports :
         - "9000:9000"
     volumes :
-        - /mnt/nfs/homes/jbondri/data/wordpress:/data/volumes/wordpress/
+        - /mnt/nfs/homes/jbondri/data/wordpress:/var/www/wordpress/
           #    depends_on :
           #        - mariadb
   mariadb :
