--- a/srcs/nginx/requirements/nginx.conf
+++ b/srcs/nginx/requirements/nginx.conf
@@ -36,17 +36,24 @@ http {
 #	}
 
 	server {
-		server_name localhost www.localhost;
+		server_name jbondri.42.fr www.jbondri.42.fr;
 		listen 8080 ssl default_server;
 		listen [::]:8080 ssl;
 		ssl_certificate     cert.crt;
  		ssl_certificate_key key.key;
    		ssl_protocols       TLSv1.2 TLSv1.3;
  		ssl_ciphers         HIGH:!aNULL:!MD5;
-		root /data/volumes/wordpress;
-		index index.html index.php;
+		root /var/www/wordpress;
+		index index.php index.html;
+		error_log 			/var/www/error.log warn;
 		location / {
 			try_files $uri $uri/ =404;
+		}
+		location ~ \.php$ {
+		    fastcgi_param REQUEST_METHOD $request_method;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
 		}
 	}
 }
