--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,8 @@
 DOMAINE_NAME=jbondri.42.fr
 
-USER_NAME_MARIADB=jbondri
-USER_PASSWORD_MARIADB=root
+NAME_SQL=wordpress
+ADMIN_SQL=jbondri
+ADMIN_PASSWORD_SQL=MDPJ
+USER_SQL=lambda
+USER_PASSWORD_SQL=lambda_1
+
