--- a/srcs/containers/mariaDB/requirements/50-server.cnf
+++ b/srcs/containers/mariaDB/requirements/50-server.cnf
@@ -16,7 +16,7 @@
 user                    = mysql
 pid-file                = /run/mysqld/mysqld.pid
 socket                  = /run/mysqld/mysqld.sock
-port                    = 3307
+port                    = 3306
 basedir                 = /usr
 datadir                 = /var/lib/mysql
 tmpdir                  = /tmp
@@ -24,7 +24,7 @@ lc-messages-dir         = /usr/share/mysql
 #skip-external-locking
 
 # Instead of skip-networking the default is now to listen only on
-# localhost which is more compatible and is not less secure.
+# jbondri.42.fr which is more compatible and is not less secure.
 bind-address            = 0.0.0.0
 
 #
