--- a/srcs/containers/nginx/requirements/nginx.conf
+++ b/srcs/containers/nginx/requirements/nginx.conf
@@ -25,20 +25,20 @@ events {
 http {
 #	server {
 #	
-#	listen 8080;
+#	listen 443;
 #	
 #	
 #	server_name locahost;
 #	
 #	
-#	return 301 https://localhost$request_uri;
+#	return 301 https://jbondri.42.fr$request_uri;
 #	
 #	}
 
 	server {
 		server_name jbondri.42.fr www.jbondri.42.fr;
-		listen 8080 ssl default_server;
-		listen [::]:8080 ssl;
+		listen 443 ssl default_server;
+		listen [::]:443 ssl;
 		ssl_certificate     cert.crt;
  		ssl_certificate_key key.key;
    		ssl_protocols       TLSv1.2 TLSv1.3;
