--- a/srcs/containers/wordpress/Dockerfile
+++ b/srcs/containers/wordpress/Dockerfile
@@ -30,18 +30,16 @@ RUN	    apt install -y \
                  php7.3-xml \
                  php7.3-zip
 WORKDIR		/tmp
-RUN		curl -O https://fr.wordpress.org/latest-fr_FR.tar.gz
 RUN 	ls
-RUN		tar xzvf *.gz
-RUN		mkdir -p /run/php /var/www/wordpress/
 RUN		sed 's/listen = \/run\/php\/php7.3-fpm.sock/listen = 0.0.0.0:9000/' -i /etc/php/7.3/fpm/pool.d/www.conf
-RUN		cp -Rp /tmp/wordpress/. /var/www/wordpress
-RUN		chmod -R 777 /var/www/wordpress
 ADD		requirements/wordpress.conf /etc/
 
 RUN		curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
 		chmod +x wp-cli.phar && \
 		mv wp-cli.phar /usr/local/bin/wp-cli
+RUN		mkdir -p /var/www/wordpress /run/php
+RUN		wp-cli core download --path=/var/www/wordpress/ --allow-root
+RUN		chmod -R 777 /var/www/wordpress
 #RUN		wp-cli config create --dbname=wordpress --dbuser=jbondri --dbpass=MDPJ --dbhost=mariadb:3306 --dbcharset=utf8 --path=/var/www/wordpress --allow-root --skip-check
 ADD		requirements/entry.sh ./
 RUN		chmod +x entry.sh
